--- a/style.css
+++ b/style.css
@@ -173,10 +173,28 @@ header {
     justify-content: center;
     align-items: center;
     z-index: 2;
+    overflow: hidden;
 }
 .wrapper .form-box {
     width: 100%;
     padding: 40px;
+}
+
+.wrapper .icon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #162038;
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
 }
 
 .form-box h2 {
