--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ header {
     color: #fff;
 }
 
-.navigation .btnLogin-popup {
+.navigation .loginbutton-popup {
     width: 130px;
     height: 50px;
     background: transparent;
@@ -155,15 +155,15 @@ header {
     transition: .5s;
 }
 
-.navigation .btnLogin-popup:hover {
+.navigation .loginbutton-popup:hover {
     background: #fff;
     color: #162938;
 }
 
 .wrapper {
     position: relative;
-    width: 440px;
-    height: 400px;
+    width: 400px;
+    height: 440px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
@@ -174,11 +174,45 @@ header {
     align-items: center;
     z-index: 2;
     overflow: hidden;
+    transform: scale(0);
+    transition: transform .5s ease, height .2s ease;
 }
+
+.wrapper.active-popup {
+    transform: scale(1);
+}
+
+.wrapper.active {
+    height: 520px;
+
+}
+
 .wrapper .form-box {
     width: 100%;
     padding: 40px;
 }
+
+.wrapper .form-box.login {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
+}
+
+.wrapper .form-box.register {
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
 
 .wrapper .icon-close {
     position: absolute;
